k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pipeline-sample-dotnet
  namespace: $(kubernetes-namespace)
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pipeline-sample-dotnet
  template:
    metadata:
      labels:
        app: pipeline-sample-dotnet
    spec:
      containers:
      - name: container
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/dfds/pipelinesample:$(Build.BuildId)
        ports:
        - containerPort: 80
          name: web
        # resources:
        #   requests:
        #     cpu: "20m"
        #     memory: "100M"
        #   limits:
        #     cpu: "20m"
        #     memory: "55M"
