k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipeline-sample-dotnet
  name: pipeline-sample-dotnet
  namespace: $(kubernetes-namespace)
  annotations:
    scrape-metrics: 'true'
spec:
  ports:
  - name: external
    port: 80
    targetPort: 80
  selector:
    app: pipeline-sample-dotnet
  type: ClusterIP
