k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pipeline-sample-dotnet
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      # host: app.ded.dfds.com
      paths:
      - path: /pipeline-sample-dotnet
        backend:
          serviceName: pipeline-sample-dotnet
          servicePort: external
